fixed dropdown z-index added section plugin added parent annotatation plugin

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,6 +86,7 @@ input:focus, button:focus, textarea:focus {
 
 .select2-container {
     width: 100% !important;
+    z-index: 121212 !important;
 }
 
 .btn-lg, .btn-group-lg > .btn {
@@ -745,3 +746,4 @@ header {
 {
     margin-right: 10px;
 }
+
